--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="STOPPED">Stopped</string>
     <string name="RUNNING">Running</string>
     <string name="ALARMING">Alarming</string>
+    <string name="Incrementing">Incrementing</string>
 
 </resources>
